--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
 project(ent)
-
-add_library(ent INTERFACE)
+add_library(ent INTERFACE include/ent.hpp)
+add_library(ent::ent ALIAS ent)
 target_include_directories(ent INTERFACE ${CMAKE_CURRENT_LIST_DIR}/include)
